--- a/src/css/header-styles.scss
+++ b/src/css/header-styles.scss
@@ -1,11 +1,11 @@
 ul {
-  border: 1px solid black;
   padding: 10px;
   margin: 0;
   text-align: right;
   font-size: 1.3em;
   color: white;
   font-weight: 100;
+  background-color: rgba(255, 255, 255, 0.2);
   li {
     list-style: none;
     display: inline-block;
