--- a/src/css/header-styles.scss
+++ b/src/css/header-styles.scss
@@ -11,10 +11,14 @@ ul {
     display: inline-block;
     padding: 10px 20px 10px;
     margin: 5px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
     transition: 0.2s;
     &:hover {
-      transition: 0.2s;
       color: red;
+      transition: 0.2s;
     }
   }
 }
