--- a/src/css/landing-styles.scss
+++ b/src/css/landing-styles.scss
@@ -10,4 +10,10 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  .container {
+    margin: 50px 200px 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 15px;
+    color: white;
+  }
 }
