--- a/src/css/login-styles.scss
+++ b/src/css/login-styles.scss
@@ -1,3 +1,31 @@
 .log-in {
-  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 1;
+  min-height: 100%;
+  min-width: 100%;
+  background-color: rgb(25, 25, 25);
+  background-color: rgba(0, 0, 0, 0.3);
+  #log-in-form {
+    border: 1px solid black;
+    margin: 100px auto 0;
+    background-color: white;
+    width: 400px;
+    height: 250px;
+    #email,
+    #password {
+      padding: 10px;
+      margin: 25px auto;
+      width: 175px;
+      display: block;
+    }
+    #submit-login {
+      padding: 10px;
+      width: 100px;
+      margin: 25px auto;
+      display: block;
+    }
+    p {
+      text-align: center;
+    }
+  }
 }
