--- a/src/css/header-styles.scss
+++ b/src/css/header-styles.scss
@@ -11,6 +11,9 @@ ul {
     display: inline-block;
     padding: 10px 20px 10px;
     margin: 5px;
+    &:first-child {
+      float: left;
+    }
   }
   a {
     text-decoration: none;
