--- a/src/css/header-styles.scss
+++ b/src/css/header-styles.scss
@@ -5,7 +5,7 @@ ul {
   font-size: 1.3em;
   color: white;
   font-weight: 100;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
   li {
     list-style: none;
     display: inline-block;
@@ -19,9 +19,12 @@ ul {
     text-decoration: none;
     color: white;
     transition: 0.2s;
-    &:hover {
+    &:hover,
+    &:visited,
+    &:active {
       color: red;
       transition: 0.2s;
+      text-decoration: none;
     }
   }
 }
